# soku

./: .gitignore  Cargo.toml  Makefile  PROJECT.md  README.md
skills/soku-architecture/: SKILL.md
skills/soku-architecture/references/: ecs_patterns.md  folder_structure.md
skills/soku-rust-core/: SKILL.md
skills/soku-rust-core/references/: commands.md
skills/soku-sync-protocol/: SKILL.md
skills/soku-sync-protocol/references/: reconciliation.md
skills/soku-wasm-bridge/: SKILL.md
skills/soku-wasm-bridge/references/: zero_copy.md
soku_core/: Cargo.toml
soku_core/src/: lib.rs
soku_core/src/commands/: mod.rs
soku_core/src/components/: camera.rs  geometry.rs  mod.rs  selectable.rs  transform.rs
soku_core/src/systems/: input.rs  mod.rs  render.rs  spatial.rs
soku_ui/: index.html  package-lock.json  package.json
soku_ui/src/: App.css  App.tsx  index.css
soku_ui/src/engine/: SokuClient.ts
soku_wasm/: Cargo.toml
soku_wasm/src/: lib.rs
