[package]
name = "soku_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true, optional = true }
once_cell = { workspace = true }
soku_core = { path = "../soku_core" }

[features]
default = ["console_error_panic_hook"]
